turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:19: error: ';' expected but ',' found.
var U(0)=(1,0),(2,1),(0,0)
              ^Turmite:20: error: ';' expected but ',' found.
var U(1)=(1,0),(2,1),(1,1)
              ^Turmite:23: error: identifier expected but integer literal found.
var rule:Array[Array[Array[Int]]] = T[U[V[0]]]
                                          ^Turmite:24: error: ']' expected but ';' found.
var nbSteps:Int = 8342;
^Turmite:56: error: ')' expected but ';' found.
  setPos(8;33);
          ^Turmite:56: error: ';' expected but ')' found.
  setPos(8;33);
             ^